--- a/index.html
+++ b/index.html
@@ -70,38 +70,21 @@
 						<p>$24.66</p>
 					</div>
 				</article>
-				<template>
-					<img src="" alt="" />
-
-					<div>
-						<h2></h2>
-
-						<p></p>
-
-						<p></p>
-
-						<p></p>
-						<p><i></i></p>
-
-						<h2></h2>
-
-						<p></p>
-					</div>
-				</template>
-        <section>
-          <h2>Booster</h2>
-          <div id="newBooster"></div>
-      </section>
-
+        		<section>
+          			<h2>Booster</h2>
+          			<div id="newBooster"></div>
+      			</section>
 				<template id = "template">
 					<img src="" alt="" />
 
-					<div>
+					
 						<h2>Card Text</h2>
 
 						<p id = "card_name"></p>
 
 						<p id = "card_type"></p>
+
+						<p id = "card_rarity"></p>
 
 						<p id = "card_oracle"></p>
 						<p id = "card_flavor"><i></i></p>
@@ -109,7 +92,7 @@
 						<h2>Card Price</h2>
 
 						<p id = "card_price"></p>
-					</div>
+					
 				</template>
 			</section>
 		</main>
