--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 				<form id="sortForm">
 					<label for="sort">Sort by</label>
 					<select name="sort" id="sort">
-						<option value="name">name (a-z)</option>
-						<option value="price">price (high-low)</option>
-						<option value="rarity">rarity (mythic-common)</option>
+						<option value="nameAZ">name (a-z)</option>
+						<option value="priceHiLo">price (high-low)</option>
+						<option value="rarityMC">rarity (mythic-common)</option>
 					</select>
 					<button type="submit" id="sortSubmit">Submit</button>
 				</form>
@@ -70,29 +70,29 @@
 						<p>$24.66</p>
 					</div>
 				</article>
-        		<section>
-          			<h2>Booster</h2>
-          			<div id="newBooster"></div>
-      			</section>
-				<template id = "template">
-					<img src="" alt="" />
+				<section>
+					<h2>Booster</h2>
+					<div id="newBooster"></div>
+				</section>
+				<template id="template">
+					<article class="card" id="templateCard">
+						<img src="" alt="" />
 
-					
 						<h2>Card Text</h2>
 
-						<p id = "card_name"></p>
+						<p id="card_name"></p>
 
-						<p id = "card_type"></p>
+						<p id="card_type"></p>
 
-						<p id = "card_rarity"></p>
+						<p id="card_rarity"></p>
 
-						<p id = "card_oracle"></p>
-						<p id = "card_flavor"><i></i></p>
+						<p id="card_oracle"></p>
+						<p id="card_flavor"><i></i></p>
 
 						<h2>Card Price</h2>
 
-						<p id = "card_price"></p>
-					
+						<p id="card_price"></p>
+					</article>
 				</template>
 			</section>
 		</main>
